add updateemployerprofile api endpoint and controller
